# compute-cfo

./: .gitignore  LICENSE  README.md
.github/workflows/: ci.yml  publish.yml
docs/: CNAME  index.html
examples/python/: basic_tracking.py  budget_enforcement.py  multi_provider.py
examples/typescript/: basic_tracking.ts  budget_enforcement.ts  multi_provider.ts
marketing/: devto_article.md  hackernews_post.md  reddit_post.md  twitter_post.md
python/: README.md  pyproject.toml
python/src/compute_cfo/: __init__.py  budget.py  exporters.py  pricing.py  tracker.py  types.py  wrapper.py
python/tests/: test_budget.py  test_pricing.py  test_tracker.py  test_wrapper.py
typescript/: package-lock.json  package.json  tsconfig.json
typescript/src/: budget.ts  exporters.ts  index.ts  pricing.ts  tracker.ts  types.ts  wrapper.ts
typescript/tests/: budget.test.ts  pricing.test.ts  tracker.test.ts  wrapper.test.ts
