[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "compute-cfo"
version = "0.3.0"
description = "Cost tracking, attribution, and budget enforcement for OpenAI, Anthropic, Gemini, and Mistral APIs"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.9"
authors = [
    { name = "Compute CFO", email = "hello@computecfo.com" },
]
keywords = ["llm", "cost", "tracking", "openai", "anthropic", "budget", "inference", "ai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
]

[project.optional-dependencies]
openai = ["openai>=1.0.0"]
anthropic = ["anthropic>=0.20.0"]
all = ["openai>=1.0.0", "anthropic>=0.20.0"]
dev = ["pytest>=7.0", "pytest-asyncio>=0.21.0"]

[project.urls]
Homepage = "https://github.com/YanLukashin/compute-cfo"
Documentation = "https://github.com/YanLukashin/compute-cfo#readme"
Repository = "https://github.com/YanLukashin/compute-cfo"
Issues = "https://github.com/YanLukashin/compute-cfo/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/compute_cfo"]

[tool.pytest.ini_options]
testpaths = ["tests"]
